...
        ScrollView {
            VStack(alignment: .leading, spacing: 16) {
                VStack(alignment: .leading, spacing: 8) {
                    Text(viewModel.repository.name)
                        .font(.title)
                        .bold()
                        .accessibilityIdentifier("repoTitle")

                    if let description = viewModel.repository.description {
                        Text(description)
                            .foregroundColor(.secondary)
                    }
                }
...
