...
struct ContentView: View {
    @State var selectedCategory: String = "All"
    @State private var showingSuggestArticle = false
    
    @State var news: [Article] = [
        Article(title: "Tittle article 1", text: "Text article 1", category: "Category 1"),
        Article(title: "Tittle article 2", text: "Text article 2", category: "Category 2")
    ]
    
    let categories = ["All", "Category 1", "Category 2", "My suggest news"]

    var body: some View {
        NavigationStack {
            VStack {
                HStack {
                    Image(systemName: "globe")
                        .imageScale(.large)
                        .foregroundStyle(.tint)
                    Text("News Hub")
                        .font(.title)
                        .bold()
                    Image(systemName: "globe")
                        .imageScale(.large)
                        .foregroundStyle(.tint)
                }
...
