...
    var body: some View {
        VStack {
            HStack {
                Image(systemName: "newspaper")
                    .imageScale(.large)
                    .foregroundStyle(.tint)
                Text("About article")
                    .font(.title2)
                    .bold()
            }
            .padding()
            
            Form {
...
