...
                            Text(category)
                        }
                    }
                    .onChange(of: settings.selectedCategory) { _, newValue in
                        vm.updateFilters(category: newValue, favoriteOnly: settings.filterFavorite)
                    }
                    .accessibilityIdentifier("FilterPicker")
                }
                
                HStack {
                    Text("Show favorite:")
                        .italic()
                    Toggle("", isOn: $settings.filterFavorite)
...
