...
        let descriptor = FetchDescriptor<Book>()
        let books = try modelContext.fetch(descriptor)
        return books.map(\.id)
    }

    func insertNewBook() -> UUID {
        let book = Book(title: "New Book")
        modelContext.insert(book)
        return book.id
    }

    func deleteBook(by id: UUID) throws {
        let descriptor = FetchDescriptor<Book>(
...
