...
            }
            .padding()
            .navigationTitle("Book Tracker")
            .toolbar {
                ToolbarItem(placement: .topBarLeading) {
                    Button(action: viewModel.addNewBook) {
                        Label("Add", systemImage: "plus")
                    }
                }
                ToolbarItem(placement: .topBarTrailing) {
                    Button { viewModel.showingSearch = true } label: {
                        Label("Search", systemImage: "magnifyingglass")
                    }
...
